rke-patches/traefik.diskstation.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diskstation-traefik-tls
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: traefik.diskstation.${topleveldomain:=undefined}
    http:
      paths:
      - backend:
          service:
            name: diskstation-traefik-tls
            port:
              number: 443
        pathType: ImplementationSpecific
---
kind: Service
apiVersion: v1
metadata:
  name: diskstation-traefik-tls
  namespace: kube-system
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8443
---
kind: Endpoints
apiVersion: v1
metadata:
  name: diskstation-traefik-tls
  namespace: kube-system
subsets:
  - addresses:
      - ip: 192.168.10.15
    ports:
      - port: 8443
